--- a/prestudy/rf_lab_ps2.tex
+++ b/prestudy/rf_lab_ps2.tex
@@ -674,7 +674,8 @@ allocated as channel bandwidths increse at the same time. More complex
 multi-level modulation schemes with full-duplex all-time transmission has 
 become more and more common. Also multiple input -- multiple output (MIMO) 
 and carrier aggregation (CA) techniques are emerging to serve customers 
-with the appetite for even larger data rates.
+with the appetite for even larger data rates, achieved in multi-band 
+and/or multi-antenna configurations.
 
 When it comes to the radio receivers, it's all about flexibility. 
 Software-defined radio (SDR) principles come in real handy when the alternative 
