Updated the chart in the last task..
However I don't have a clue what do NBB and ACS stand for

--- a/prestudy/rf_lab_ps2.tex
+++ b/prestudy/rf_lab_ps2.tex
@@ -659,7 +659,7 @@ For instance, 3G includes/supports 2G functionality to some extent.
 	%Max. IBB [dBm]								& $-53 \ldots {-23}$						& $-61 \ldots {-41}$					& $-23$	 \\
 	%Max. OBB [dBm]								& $-27 \ldots 0$							& $-44 \ldots {-15}$					& $-23$	 \\
 	%Max. NBB [dBm]								& $-$										& $-57 \ldots {-56}$					& $-23$	 \\
-	%Max. spurious [dBm]						& $-$										& $-44$									& $-23$	 \\
+	%Max. spurious [dBm]						& $-30$										& $-44$									& $-23$	 \\
 	%Min. ACS [dB]								& $-$										& $33$									& $33$	 \\
 	%Ref. sensitivity [dBm]						& $-104 \ldots {-100}$						& $-108 \ldots {-99}$					& $-91 \ldots {-106}$	 \\
 	%Linearity, min. $\mathit{IIP}_3$ [dBm]		& $+55$										& $+65$									& $+72 \ldots {+90}$
