--- a/prestudy/rf_lab_ps2.tex
+++ b/prestudy/rf_lab_ps2.tex
@@ -682,9 +682,10 @@ Software-defined radio (SDR) principles come in real handy when the alternative
 is to replicate a front-end for each band. Naturally some replication of the 
 RX-chain is required for both MIMO and CA. In addition to being required 
 to work on a larger band using wider channel, the linearity requirements 
-have gone up as. In the last two generations, there have been no ground-breaking 
+have gone up as. In the last two generations, there have been no groundbreaking 
 changes in the power requirements, such as minimum/maximum levels for 
-(un)wanted signals, inside or outside the band of interest.
+(un)wanted signals, inside or outside the band of interest. Of course 
+there are some changes mostly explainable due to increased bandwidth.
 
 \newpage
 \begin{thebibliography}{9}%\itemsep 7pt\parskip -5pt 
