additions from prestudy

--- a/final/rf_lab_final2.tex
+++ b/final/rf_lab_final2.tex
@@ -16,6 +16,11 @@
 \usepackage{verbatim}
 
 
+\newlength{\oneLine}
+\newlength{\halfLine}
+\setlength{\oneLine}{12pt}
+\setlength{\halfLine}{6pt}
+
 \newlength{\eqMargin}
 \newlength{\eqHorizMargin}
 \newlength{\eqVertMargin}
@@ -145,7 +150,7 @@ TODO: Huy and Sampo (1st paragraph: general intro, 2nd: the measuremets, 3rd: st
 \newpage
 \section{Measurement steps}
 
-TODO: Tuomas
+TODO: Tuomas (corrections etc.)
 
 \begin{comment} % As an example
 There were two types of measurements; power measurements with a spectrum analyzer 
@@ -159,12 +164,146 @@ The setups correspond very closely to those presented in the pre-study.
 
 \subsection{1~dB compression point}
 
-TODO: Tuomas
+The measurement setup suitable for this measurement is shown in Fig. \ref{f:m1}. 
+A signal generator is used as a signal source, and the generated signal is passed 
+through the DDU module before detection with a (precalibrated) spectrum analyzer. 
+The input and output connections used in the DDU module are ANT and RX$_1$, 
+respectively. An attenuator is used between the generator and the DDU module, 
+if necessary. While the operator's manual of the R\&S SML03 signal generator 
+does not explicitly mention the power range, the testing range defined in the 
+\textit{Performance Tests} suggests a (reliable) minimum output power level 
+of $-80$~dBm.
+
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(167, 13)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[34mm]{Signal generator}}
+		\put(34, 1.4){\vector(1,0){14}}
+		\put(48, 0){\framebox[23mm]{Attenuator}}
+		\put(71, 1.4){\vector(1,0){14}}
+		\put(85, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(113, 1.4){\vector(1,0){14}}
+		\put(127, 0.4){\framebox[40mm]{Sprectrum analyzer}}
+		
+		%\put(41, 4){\makebox(0,0){Cable}}
+		%\put(78, 4){\makebox(0,0){Cable}}
+		%\put(120, 4){\makebox(0,0){Cable}}
+		\put(99, 7){\makebox(0,0){DDU module}}
+		\put(66.5, 8){\makebox(0,0){$\overbrace{\hspace*{35mm}}^\textrm{if needed}$}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Measurement setup used in the first measurement task.}
+	\label{f:m1}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+The measurement itself is basically a power sweep at a constant frequency of 
+$f = 900$ MHz. We start off with a power level well above the receiver sensitivity 
+level ($P_\mathrm{min,\;BS} \approx -112.5$~dBm), say $-100$~dBm. From there we 
+gradually increase the power in suitable steps of $0.1 \ldots 10$~dB, depending on 
+the current position on the $P_\mathrm{out}(P_\mathrm{in})$ transfer curve. That 
+is, we'll start with a big step size and decrease it as we get close to the 
+``sweet spot''. 
+
+This power sweep is continued until we experience a compression of more than the 
+required 1 dB. While one could just measure the input power required for the output 
+to be 1 dB less than the expected value, this type of ``on-the-fly'' comparison 
+is prone to error. Thus it's better to measure a full power sweep and leave the 
+comparison to be done after the measurement and against a fitted straight representing 
+ideal behaviour.
+
+Since we are dealing with a GSM receiver, we may use the same settings for the 
+spectrum analyzer as we did in the first labs -- except for the averaging factor. 
+They were as follows: an averaging factor of 500, zero span and 30~Hz video and 
+resolution bandwidths. An averaing factor of 500 would make the measurement quite 
+lengthy, especially if dense power ``grid'' is used. Averaging over 100 measurements 
+will most likely be more than adequate. Depending on the 1~dB compression point, 
+we might need to watch out for compression in the spectrum analyzer. This is taken 
+care of by altering the input attenuation.
+
+The effect of the cables and the attenuator may be measured using a VNA (could be used 
+for the entire measurement aswell), or using the SA by making the whole measurement 
+relative. In a relative measurement, the power is measured again when the DDU module 
+is by-passed to account only for the cables and the possible attenuator. This also 
+required to know the real input power. 
 
 
 \subsection{Frequency response}
 
-TODO: Tuomas
+Wasn't this already covered in the first laboratory assignment as a part of the 
+diplexer characterization? Fig. \ref{f:m2} presents the measurement setup used 
+there. The DDU module is simply connected between the two ports of a precalibrated 
+VNA; ANT and RX$_1$ connectors of the DDU module are connected to ports 1 and 2 of 
+the VNA, respectively. In the VNA, measurement power shoud be as high as possible 
+due the stop band-attenuation, yet simultaneously small enough not to cause 
+compression in the pass-band (in neither the VNA nor in the pre-amp itself).
+
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(126, 10)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[29mm]{VNA (Port 1)}}
+		\put(29, 1.4){\vector(1,0){20}}
+		\put(49, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(77, 1.4){\vector(1,0){20}}
+		\put(97, 0.4){\framebox[29mm]{VNA (Port 2)}}
+		
+		%\put(39, 4){\makebox(0,0){Cable}}
+		%\put(87, 4){\makebox(0,0){Cable}}
+		\put(63, 7){\makebox(0,0){DDU module}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Measurement setup used when determining the gain of the pre-amplifier block.}
+	\label{f:m2}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+The following figure (Fig. \ref{f:r1}) shows the results obtained in the first lab works 
+with a transmit power of $-20$ dBm in the VNA (using the B-half of the BS and connecting 
+the ports vice versa). In the figure, in addition to GSM RX and TX bands (in red), both 
+3~dB (in blue) and noise (in green) bandwidth of the pre-amp block are visualized. This 
+noise bandwidth visualization is somewhat questionable as it's a purely theoretical concept, 
+but is nevertheless shown for scale. The shown noise bandwidth is found using a numerical 
+approximation with $|S_{12}|$ of the formula given in the lecture supplement handout:
+
+\begin{equation}
+B_\mathrm{n} = \frac{1}{G_\mathrm{T,\;max}} \int_0^\infty G_\mathrm{T}(f) \, df.
+\end{equation}
+
+The noise bandwidth shown is less than the actual band since we cannot use infinite frequency 
+range. Frequency range of $850 \ldots 1000$~MHz with $|S_{12}|_\mathrm{max} = 24.4$~dB 
+was used instead. The obtained value (38.1~MHz) is roughly 6~\% shy of the 3~dB bandwidth 
+(40.6~MHz), as one might expect. The 3~dB bandwidth may thus be used to avoid being 
+overly optimistic.
+
+\begin{figure}[h!]
+	\begin{center}
+	\epsfig{file=img/s12.eps, width=\textwidth}
+	\caption{Results from the diplexer characterization.}
+	\label{f:r1}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+In the graphical approximation method we need to investigate the effect of frequency 
+roll-off speed. From Fig. \ref{f:r1} the transition bands are approx. 30~MHz (3.4 \%) 
+and 5~MHz (0.55 \%) for lower and upper bands, respectively. During this transition, 
+the $S_12$ drops roughly 100~dB from $+20$~dB to $-80$~dB. This corresponds to a slope 
+of $3.3$~dB/MHz (29~dB/\%) and $-20$~dB/MHz ($-180$~dB/\%), respectively. The effect of 
+such steep slopes are neglectable, and thus the 3~dB bandwidth may be used as the noise 
+bandwidth.
+
+If a VNA is not available as the instructions suggest, the task is quite laborious and 
+absurd, just to be honest. Nevertheless, the procedure is listed here for completeness. 
+We would need to simulate the VNA function manually using a signal generator and a power 
+meter or a signal analyzer, leading to a setup like the one shown in Fig. \ref{f:m1}. The
+output power is kept constant while frequency is swept over the range, taking notes on the 
+relative power levels observed in the detector.
 
 \begin{comment} % As an example
 \begin{table}[!h]
@@ -188,11 +327,107 @@ TODO: Tuomas
 
 \subsection{Noise temperature}
 
-TODO: Tuomas
+In the third measurement task, we'll use a setup shown in Fig. \ref{f:m3}. 
+A DC-voltage source is connected to a noise diode connected directly to the 
+ANT-input in the pre-amplifier block. This direct connection is desirable as 
+attenuation changes the noise temperature. The signal is led from the RX$_1$ 
+output to a spectrum analyzer. An LNA may be needed in between the DDU output 
+and the spectrum analyzer, as the spectrum analyzer might not be sensitive 
+enough for the cold noise source. See section \ref{s:noise} for details.
+
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(166, 13)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[10mm]{$V_\mathrm{DC}$}}
+		\put(10, 1.4){\vector(1,0){9}}
+		\put(19, 0){\framebox[25mm]{Noise diode}}
+		\put(44, 1.4){\vector(1,0){24}}
+		\put(68, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(96, 1.4){\vector(1,0){9}}
+		\put(105, 0.4){\framebox[12mm]{LNA}}
+		\put(117, 1.4){\vector(1,0){9}}
+		\put(126, 0.4){\framebox[40mm]{Sprectrum analyzer}}
+		
+		\put(5, 7){\makebox(0,0){On/Off}}
+		%\put(20, 4){\makebox(0,0){Cable}}
+		\put(56, 8){\makebox(0,0){Direct}}
+		\put(56, 4){\makebox(0,0){connection}}
+		%\put(118, 4){\makebox(0,0){Cable}}
+		\put(81.5, 7){\makebox(0,0){DDU module}}
+		\put(115.5, 8){\makebox(0,0){$\overbrace{\hspace*{19mm}}^\textrm{if needed}$}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Noise temperature measurement setup}
+	\label{f:m3}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+%In room temperature, a matched load (an approximation in this case) outputs a noise power 
+%of $-159$ dBm for a 30 Hz band. With a maximum gain of 24.4~dB and a total noise figure 
+%of 3.9~dB, the expected noise level is around $-131$~dBm. This value is considerably 
+%lower than the given sensitivity of the SA: $P_\mathrm{SA,\;min} < -125$~dBm when 
+%$B_\mathrm{res.} = 30$~Hz. LNA could be used to boost the signal to a more appropriate 
+%level as it's effect on the noise temperature could be compensated using the Friis' 
+%noise formula.
+
+The measurement itself is carried out measuring two power levels required in the 
+Y-pa\-ram\-e\-ter; when the DC-voltage is off/shorted (``cold'') and on (``hot''). As 
+for the SA settings, we are measuring noise at a single frequency (using zero-span): 
+a very weak, random signal. Thus, input attenuator should be disabled, and minimum 
+resolution bandwith used. A large averaging factor, say a thousand, is also beneficial. 
+The measurement may take a few minutes, and it's OK; there are only two measurements 
+to be made.
 
 \subsection{Sensitivity}
 
-TODO: Tuomas
+In the sensitivity measurement, we're trying to measure the minimum input power at 
+ANT input that results in a detectable signal above the noise floor in the ouput 
+of the DDU module. For this, a measurement setup identical to the one used in the 
+first task may be used, as is shown in the following figure (Fig \ref{f:m4}). This 
+time though it's more than likely that an attenuator is required.
+
+\begin{figure}[h!]
+	\begin{center}
+	\setlength{\unitlength}{1mm}
+	\begin{picture}(167, 13)
+		\linethickness{0.2mm}
+		\put(0, 0.4){\framebox[34mm]{Signal generator}}
+		\put(34, 1.4){\vector(1,0){14}}
+		\put(48, 0){\framebox[23mm]{Attenuator}}
+		\put(71, 1.4){\vector(1,0){14}}
+		\put(85, 0.4){\framebox[28mm]{$\mathrm{ANT} \rightarrow \mathrm{RX}_1$}}
+		\put(113, 1.4){\vector(1,0){14}}
+		\put(127, 0.4){\framebox[40mm]{Sprectrum analyzer}}
+		
+		%\put(41, 4){\makebox(0,0){Cable}}
+		%\put(78, 4){\makebox(0,0){Cable}}
+		%\put(120, 4){\makebox(0,0){Cable}}
+		\put(99, 7){\makebox(0,0){DDU module}}
+		\put(66.5, 8){\makebox(0,0){$\overbrace{\hspace*{35mm}}^\textrm{if needed}$}}
+	\end{picture}
+	\vspace*{\halfLine}
+	\caption{Measurement setup used in the sensitivity measurement.}
+	\label{f:m4}
+	\end{center}
+	\vspace*{-12pt}
+\end{figure}
+
+The measurement starts by measuring the noise floor at 900~MHz without any signal 
+we're hoping to detect. That is, the RF power is switched off at the generator. 
+Then we turn on an input signal that's some dBs sensitivity of $-112.5$~dBm. We 
+gradually increase the power until the signal-to-noise ratio is no less than the 
+10~dB required by the standard. One could also measure the power required to beat 
+the noise just barely, and add the SNR later on if  $P_\mathrm{out}(P_\mathrm{in})$ 
+relation is assumed to be ideal.
+
+Since it's a GSM system, we use the measurement settings as they are defined in 
+the standard. They are as follows: an averaging factor of 500, zero span and 30~Hz 
+video and resolution bandwidths. As the spectrum analyzer input power is expected 
+to be less than $-80$~dBm ($P_\mathrm{SA} \approx P_\mathrm{DDU,\;min} + G_\mathrm{DDU} = -112.5 \mathrm{\;dBm} + 24.4 \mathrm{\;dB}= -88.1 \mathrm{\;dBm}$), 
+it's best to disable the input attenuator.
 
 
 \newpage
@@ -203,7 +438,7 @@ TODO: Huy and Sampo (general results and intro to more specific results)
 
 \subsection{1~dB compression point}
 
-TODO: Huy and Sampo
+TODO: Text: Huy and Sampo, Graphs: Tuomas
 
 
 \subsection{Frequency response}
